fix(todomvc): prevent input box overflowing row container when screen is small

--- a/examples/todomvc/src/todomvc.css
+++ b/examples/todomvc/src/todomvc.css
@@ -41,6 +41,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 12px;
+  width: 100%;
 }
 
 .header .title {
@@ -59,6 +60,8 @@
   border-bottom: 1px solid #ededed;
   background-color: rgba(0, 0, 0, 0.002);
   box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+  overflow: hidden;
+  width: 100%;
 }
 
 .header-toggle-all {
